# post-office

./: .gitignore  AGENTS.md  LICENSE  README.md  config.example.toml  flake.nix  pyproject.toml
bridges/whatsapp/: index.js  package-lock.json  package.json
nix/: module.nix
src/post_office/: __init__.py  cli.py  config.py  db.py  filters.py  models.py  runtime.py
src/post_office/outputs/: email.py  printer.py
src/post_office/reports/: daily.py
src/post_office/sources/: __init__.py  base.py  instagram.py  signal.py  whatsapp.py
tests/: test_cli.py  test_config.py  test_db.py  test_filters.py  test_printer.py  test_reports.py  test_runtime.py  test_sources.py
whatsapp-bridge/: index.js  package.json
