[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "post-office"
version = "0.1.0"
description = "Collect messages from chat sources, filter them, and create daily/live reports."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Post Office" }]
dependencies = ["PyQRCode>=1.2.1"]

[project.optional-dependencies]
printer = ["Pillow>=10"]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
post-office = "post_office.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/post_office"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["post_office"]

[tool.pytest.ini_options]
pythonpath = ["src"]
